[gd_scene load_steps=3 format=3 uid="uid://eeokp7umj4rr"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_xu4lc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bqg4"]
size = Vector2(123, 198)

[node name="Card" type="Node2D"]
script = ExtResource("1_xu4lc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6bqg4")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
